--- a/packages/playable-adapter-core/package.json
+++ b/packages/playable-adapter-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "playable-adapter-core",
-  "version": "1.2.4",
+  "version": "1.2.8",
   "description": "A node application for exporting playable ads",
   "title": "Playable Adapter Core",
   "main": "dist/playable-adapter-core.js",
@@ -8,7 +8,7 @@
   "files": [
     "dist"
   ],
-  "author": "ppgee",
+  "author": "ppgee & yueby",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ppgee/cocos-pnp.git"
@@ -42,6 +42,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "cheerio": "1.0.0-rc.12",
+    "jszip": "^3.10.1",
     "mime-types": "^2.1.35",
     "pako": "^2.1.0"
   }
