--- a/packages/playable-ads-adapter/package.json
+++ b/packages/playable-ads-adapter/package.json
@@ -4,7 +4,7 @@
   "description": "i18n:playable-ads-adapter.description",
   "main": "./main.js",
   "devDependencies": {
-    "@cocos/creator-types": "^3.8.5",
+    "@cocos/creator-types": "^3.8.3",
     "@rollup/plugin-alias": "^4.0.2",
     "@rollup/plugin-commonjs": "^23.0.0",
     "@rollup/plugin-json": "^5.0.0",
@@ -34,6 +34,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "cheerio": "1.0.0-rc.12",
+    "fs-extra": "^11.3.0",
     "jszip": "^3.10.1",
     "mime-types": "^2.1.35",
     "node-cmd": "^5.0.0",
