--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "cocos-pnp",
-  "version": "1.3.5",
+  "version": "1.3.7",
   "description": "Ads Playable for Cocos",
   "main": "index.js",
   "scripts": {
     "commit": "cz",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:core": "pnpm -F playable-adapter-core build",
+    "build:2x": "pnpm run build:core && pnpm -F playable-ads-adapter build:2x",
+    "build:3x": "pnpm run build:core && pnpm -F playable-ads-adapter build:3x",
+    "build": "pnpm run build:core && pnpm -F playable-ads-adapter build:2x && pnpm -F playable-ads-adapter build:3x",
+    "watch:2x": "pnpm -F playable-ads-adapter watch:2x",
+    "watch:3x": "pnpm -F playable-ads-adapter watch:3x"
   },
   "repository": {
     "type": "git",
